<resources>
    <string name="app_name">Implicit Intents</string>

    <string name="edittext_uri">http://afozbek.github.io/me</string>
    <string name="button_uri">Open Website</string>

    <string name="edittext_loc">Atasehir Istanbul</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share">\ Javascript is Awesome 😀😃😄</string>
    <string name="button_share">Share This Text</string>
</resources>
